transition building lines colors, refining road widths

--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -182,7 +182,7 @@ layers:
             draw:
                 lines:
                     color: [0.086,0.135,0.260]
-                    width: 0.15
+                    width: 0.15px
                     outline:
                         color: [[8,[0.278,0.499,0.667]],[12,[0.329,0.588,0.784]]]
                         width: 0.3px
@@ -191,7 +191,7 @@ layers:
                 draw:
                     lines:
                         color: [[8,[0.418,0.754,0.736]],[12,[0.418,0.754,0.736]],[13,[0.086,0.135,0.260]]]
-                        width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,0.75px],[13,0.1px],[14,2px],[15,5px],[16,6px],[17,9px],[18,16px],[19,27px]]
+                        width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,0.75px],[13,0.1px],[14,2px],[15,5px],[16,6px],[17,9px],[18,17px],[19,27px],[20,40px]]
                         outline:
                             color: [[8,[0.329,0.588,0.784]],[13,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
                             width: [[8,0px],[12,0px],[13,0.6px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
@@ -199,7 +199,7 @@ layers:
                     filter: { ref: true }
                     draw:
                         lines:
-                            width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,2px],[13,0.1px],[14,2px],[15,5px],[16,7px],[17,9px]]
+                            width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,2px],[13,0.1px],[14,2px],[15,5px],[16,7px],[17,9px],[18,17px],[19,27px],[20,40px]]
                             outline:
                                 color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
                                 width: [[8,0px],[12,0px],[13,1px],[15,1.5px]]
@@ -208,7 +208,7 @@ layers:
                 draw:
                     lines:
                         color: [[8,[0.418,0.754,0.736]],[12,[0.418,0.754,0.736]],[13,[0.086,0.135,0.260]]]
-                        width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,0.75px],[13,0.1px],[14,1.5px],[15,5px],[16,6px],[17,9px]]
+                        width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,0.75px],[13,0.1px],[14,1.5px],[15,5px],[16,6px],[17,9px],[18,14px],[19,20px],[20,40px]]
                         outline:
                             color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
                             width: [[8,0px],[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
@@ -218,20 +218,20 @@ layers:
                 draw:
                     lines:
                         color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]],[15,[0.082,0.133,0.259]]]
-                        width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,1.5px],[16,3px],[17,8px]]
+                        width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,2px],[16,4px],[17,8px],[18,14px],[19,20px],[20,40px]]
                         outline:
                             color: [[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
-                            width: [[12,0px],[14,0.3px],[15,1px]]
+                            width: [[12,0px],[14,0.4px],[15,1px],[18,1.5px]]
 
         minor_road:
             filter: { kind: minor_road, not: { highway: service, aeroway: [runway, taxiway] } }
             draw:
                 lines:
                     color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]],[15,[0.082,0.133,0.259]]]
-                    width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,1.5px],[16,3px],[17,8px]]
+                    width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,2px],[16,4px],[17,8px],[18,14px],[19,20px],[20,40px]]
                     outline:
                         color: [[12,[0.248,0.397,0.439]],[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
-                        width: [[12,0px],[14,0.4px],[15,1px]]
+                        width: [[12,0px],[14,0.4px],[15,1px],[18,1.5px]]
 
 styles:
     highway-dashed:
