--- a/layers/buildings.yaml
+++ b/layers/buildings.yaml
@@ -25,8 +25,8 @@ layers:
                     color: [[13,[0.212,0.302,0.431]],[14,[0.181,0.259,0.370]]]
                     visible: true
                 lines:
-                    color: [[13,[0.004,0.165,0.933]],[16,[0.004,0.165,0.933]],[17,[0.074,0.217,0.930]]]
-                    width: [[13,0px],[14,0px],[15,0.15px],[16,0.35px],[17,1px],[18,1px]]
+                    color: [[13,[0.004,0.165,0.933]],[15,[0.592,0.827,0.851]]]
+                    width: [[13,0px],[14,0.25px],[15,0.5px]]
                     visible: true
 
         extrude:
@@ -42,6 +42,7 @@ layers:
                 lines:
                     visible: true
                     color: [0.592,0.827,0.851]
+                    width: [[16,0.5px],[17,1px]]
                     extrude: function() { return feature.height || 20; }
 
 styles:
