--- a/styles/polygons.yaml
+++ b/styles/polygons.yaml
@@ -32,12 +32,13 @@ styles:
                         color = vec4(0.);
                     }
     elevation-color-contours:
-        mix: [color-palette, elevation-contours]
+        mix: [tron-palette, elevation-contours]
         shaders:
             defines:
                 PI: 3.1415926535897932384626433832795
+                CONTOURS_PALETTE_RANGE: 2.
                 CONTOURS_BACKGROUND_COLOR: vec4(0.)
-                CONTOURS_COLOR: vec4(palette(0.380+normal_elv_raster.a+u_time*.5,vec3(.5),vec3(.5),vec3(2.,1.,0.),vec3(.5,.2,0.25)), 1.)
+                CONTOURS_COLOR: vec4(palette(normal_elv_raster.a*PI*CONTOURS_PALETTE_RANGE+u_time*.5), 1.)
                 CONTOURS_SCALE: 60.
                 CONTOURS_SPEED: -0.1
                 CONTOURS_OFFSET: u_time*CONTOURS_SPEED
