--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -64,7 +64,7 @@ layers:
                     $zoom: { min: 4 }
                 draw:
                     polygons:
-                        style: landuse
+                        style: landuse-tier2-conservation-contours
                         # color: [0.214,0.690,0.611]
                         color: [0.000,0.649,0.829]
                         visible: true
@@ -237,17 +237,17 @@ styles:
                 STRIPES_MAX: -.025
                 STRIPES_ALPHA: .5
                 STRIPES_WIDTH: zoom()
-    landuse-tier2-conservation:
-        mix: [functions-zoom, polygons-stripes]
-        blend: overlay
+    landuse-tier2-conservation-contours:
+        mix: [tron-palette, elevation-contours]
         shaders:
             defines:
-                ZOOM_START: 10.
-                ZOOM_END: 20.
-                STRIPES_ANGLE: PI*0.45
-                STRIPES_MAX: -.025
-                STRIPES_ALPHA: .8
-                STRIPES_WIDTH: zoom()
+                PI: 3.1415926535897932384626433832795
+                CONTOURS_PALETTE_RANGE: 2.
+                CONTOURS_BACKGROUND_COLOR: vec4(0.)
+                CONTOURS_COLOR: vec4(palette(normal_elv_raster.a*PI*CONTOURS_PALETTE_RANGE+u_time*.5), 1.)
+                CONTOURS_SCALE: 60.
+                CONTOURS_SPEED: -0.1
+                CONTOURS_OFFSET: u_time*CONTOURS_SPEED
     landuse-tier4-golf_course:
         mix: [functions-zoom, polygons-stripes]
         blend: overlay
