--- a/styles/polygons.yaml
+++ b/styles/polygons.yaml
@@ -32,6 +32,7 @@ styles:
                     }
     elevation-color-contours:
         mix: [tron-palette, elevation-contours]
+        animated: global.enable_animation
         shaders:
             defines:
                 PI: 3.1415926535897932384626433832795
