added service roads, primary tunnels, secondary routes n tunnels, glowing swimming pools

--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -206,6 +206,13 @@ layers:
                                 # color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
                                 color: [1.00,1.00,1.00]
                                 width: [[8,0px],[11,0px],[12,0.30px],[13,0.5px],[15,1.5px]]
+            tunnel:
+                filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                draw:
+                    lines:
+                        color: [0.201,0.286,0.409]
+                        outline:
+                            color: [0.276,0.568,0.950]
             secondary:
                 filter: { highway: secondary }
                 draw:
@@ -215,26 +222,53 @@ layers:
                         outline:
                             color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
                             width: [[8,0px],[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
+                routes:
+                    filter: { ref: true, $zoom: { min: 12 } }
+                    draw:
+                        lines:
+                            color: [[12,[0.418,0.754,0.736]],[13,[0.086,0.135,0.260]]]
+                            width: [[12,0.75px],[13,0.1px],[14,1.5px],[15,5px],[16,6px],[17,9px],[18,14px],[19,20px],[20,40px]]
+                            outline:
+                                color: [[12,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
+                                width: [[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
+                    tunnel:
+                        filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                        draw:
+                            lines:
+                                color: [0.201,0.286,0.409]
+                                outline:
+                                    color: [0.276,0.568,0.950]
 
             tertiary:
                 filter: { highway: [tertiary, tertiary_link] }
                 draw:
                     lines:
-                        color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]],[15,[0.082,0.133,0.259]]]
+                        color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
                         width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,2px],[16,4px],[17,8px],[18,14px],[19,20px],[20,40px]]
                         outline:
-                            color: [[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
+                            # color: [[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
+                            color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]]]
                             width: [[12,0px],[14,0.4px],[15,1px],[17,1.25px],[18,1.5px]]
 
         minor_road:
             filter: { kind: minor_road, not: { highway: service, aeroway: [runway, taxiway] } }
             draw:
                 lines:
-                    color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]],[15,[0.082,0.133,0.259]]]
-                    width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,2px],[16,4px],[17,8px],[18,14px],[19,20px],[20,40px]]
+                    color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
+                    width: [[12,0.5px],[13,0.5px],[14,0.15px],[15,2px],[16,4px],[17,8px],[18,14px],[19,20px],[20,40px]]
                     outline:
-                        color: [[12,[0.248,0.397,0.439]],[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
-                        width: [[12,0px],[14,0.4px],[15,1px],[17,1.25px],[18,1.5px]]
+                        # color: [[12,[0.248,0.397,0.439]],[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
+                        color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]]]
+                        width: [[12,0px],[14,0.4px],[15,0.5px],[17,1.25px],[18,1.5px]]
+        service_road:
+            filter: { kind: minor_road, highway: service }
+            draw:
+                lines:
+                    color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
+                    width: [[12,0.5px],[13,0.5px],[14,0.15px],[15,1.25px],[16,2px],[18,5px],[19,10px],[20,15px]]
+                    outline:
+                        color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]]]
+                        width: [[12,0px],[14,0.4px],[15,0.5px],[17,1.25px],[18,1.5px]]
 
 styles:
     highway-dashed:
