--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -78,10 +78,6 @@ layers:
                         style: water-boundaries-animated
                         order: global.order
                         width: [[4,0px],[11,4px],[14,12px],[16,16px],[18,24px],[20,30]]
-                        # color: [0.017, 1.000, 0.649]
-                        # color: [0.055,0.176,0.949]
-                        # color: [0.051,0.158,0.850]
-                        # color: [0.043,0.133,0.720]
                         color: [0.091,0.329,0.692]
                         join: round
 
@@ -149,8 +145,8 @@ styles:
 
     water-later:
         base: polygons
-        animated: global.enable_animation
         mix: [functions-zoom, polygons-shimmering]
+        animated: true
         shaders:
             defines:
                 ZOOM_START: 11.
@@ -160,12 +156,22 @@ styles:
                 SHIMMERING_BACKGROUND: vec3(0.145,0.157,0.247)
                 SHIMMERING_SPEED: .5
                 SHIMMERING_AMOUNT: zoom()
+                SHIMMERING_ANIMATED: true
+
     water-boundaries:
         base: lines
         mix: [lines-coast]
+        animated: false
+        shaders:
+            defines:
+                COAST_WAVES_ANIMATED: false
     water-boundaries-animated:
         base: lines
-        mix: [lines-coast-animated]
+        mix: [lines-coast]
+        animated: true
+        shaders:
+            defines:
+                COAST_WAVES_ANIMATED: true
     swimming-pool-glow:
         base: lines
         mix: [lines-glow]
