--- a/tron.yaml
+++ b/tron.yaml
@@ -13,6 +13,9 @@ import:
     - layers/landuse.yaml
     - layers/boundaries.yaml
 
+global:
+    enable_animation: true
+
 # Sources
 sources:
     mapzen:
