--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -195,7 +195,7 @@ layers:
                         width: [[8,0.25px],[9,0.3px],[11,0.3px],[12,0.75px],[13,0.1px],[14,2px],[15,5px],[16,6px],[17,9px],[18,17px],[19,27px],[20,40px]]
                         outline:
                             color: [[8,[0.418,0.754,0.736]],[14,[0.416,1.000,1.000]],[18,[0.039,0.980,1.000]]]
-                            width: [[8,0px],[12,0px],[13,0.6px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px],[19,2px]]
+                            width: [[8,0px],[12,0px],[13,0.6px],[14,0.75px],[15,1px],[17,2px],[18,2px],[19,2px]]
                 routes:
                     filter: { ref: true }
                     draw:
@@ -221,7 +221,7 @@ layers:
                         width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,0.75px],[13,0.1px],[14,1.5px],[15,5px],[16,6px],[17,9px],[18,14px],[19,20px],[20,40px]]
                         outline:
                             color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
-                            width: [[8,0px],[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
+                            width: [[8,0px],[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,2px],[18,2px]]
                 routes:
                     filter: { ref: true, $zoom: { min: 12 } }
                     draw:
@@ -247,8 +247,8 @@ layers:
                         width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,2px],[16,4px],[17,8px],[18,14px],[19,20px],[20,40px]]
                         outline:
                             # color: [[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
-                            color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]]]
-                            width: [[12,0px],[14,0.4px],[15,1px],[17,1.25px],[18,1.5px]]
+                            color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]],[17,[0.275,0.392,0.560]]]
+                            width: [[12,0px],[14,0.4px],[15,1px],[17,2px],[18,2px]]
 
         minor_road:
             filter: { kind: minor_road, not: { highway: service, aeroway: [runway, taxiway] } }
@@ -258,8 +258,8 @@ layers:
                     width: [[12,0.5px],[13,0.5px],[14,0.15px],[15,2px],[16,4px],[17,8px],[18,14px],[19,20px],[20,40px]]
                     outline:
                         # color: [[12,[0.248,0.397,0.439]],[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
-                        color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]]]
-                        width: [[12,0px],[14,0.4px],[15,0.5px],[17,1.25px],[18,1.5px]]
+                        color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]],[17,[0.275,0.392,0.560]]]
+                        width: [[12,0px],[14,0.4px],[15,0.5px],[17,2px],[18,2px]]
         service_road:
             filter: { kind: minor_road, highway: service }
             draw:
@@ -267,7 +267,7 @@ layers:
                     color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
                     width: [[12,0.5px],[13,0.5px],[14,0.15px],[15,1.25px],[16,2px],[18,5px],[19,10px],[20,15px]]
                     outline:
-                        color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]]]
+                        color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]],[17,[0.275,0.392,0.560]]]
                         width: [[12,0px],[14,0.4px],[15,0.5px],[17,1.25px],[18,1.5px]]
 
 styles:
