--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -297,6 +297,13 @@ layers:
                         # color: [[12,[0.248,0.397,0.439]],[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
                         color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]],[17,[0.275,0.392,0.560]]]
                         width: [[12,0px],[14,0.4px],[15,0.5px],[17,2px],[18,2px]]
+            tunnel:
+                filter: { is_tunnel: yes, $zoom: { min: 13 } }
+                draw:
+                    lines:
+                        color: [0.201,0.286,0.409]
+                        outline:
+                            color: [0.276,0.568,0.950]
         service_road:
             filter: { kind: minor_road, highway: service }
             draw:
