preparing stuff for when the global.animated false works

--- a/global.yaml
+++ b/global.yaml
@@ -1,4 +1,5 @@
 global:
+    animated: true
     order_add_9: function () { return (feature.sort_key * 20 + 9); }
     order_add_8: function () { return (feature.sort_key * 20 + 8); }
     order_add_7: function () { return (feature.sort_key * 20 + 7); }
