--- a/tron.yaml
+++ b/tron.yaml
@@ -22,7 +22,7 @@ sources:
     normals-elevation:
         type: Raster
         url: https://s3.amazonaws.com/elevation-tiles-prod/normal/{z}/{x}/{y}.png
-        max_zoom: 15
+        max_zoom: 15    
 
 # Camera
 cameras:
@@ -31,5 +31,6 @@ cameras:
 
 # Scene
 scene:
+    animated: global.animated
     background:
         color: black
