--- a/tron.yaml
+++ b/tron.yaml
@@ -8,7 +8,7 @@ import:
     - layers/water.yaml
     - layers/earth.yaml
     - layers/roads.yaml
-    # - layers/transit.yaml
+    - layers/transit.yaml
     - layers/buildings.yaml
     - layers/landuse.yaml
     - layers/boundaries.yaml
