--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -196,6 +196,15 @@ layers:
                         outline:
                             color: [[8,[0.418,0.754,0.736]],[14,[0.416,1.000,1.000]],[18,[0.039,0.980,1.000]]]
                             width: [[8,0px],[12,0px],[13,0.6px],[14,0.75px],[15,1px],[17,2px],[18,2px],[19,2px]]
+                trunk-primary-z17:
+                    filter:
+                        $zoom: { min: 17 }
+                    draw:
+                        center-line:
+                            style: center-glow
+                            order: global.order_add_1
+                            color: [0.034,0.105,0.569]
+                            width: 6px
                 routes:
                     filter: { ref: true }
                     draw:
@@ -206,6 +215,15 @@ layers:
                                 # color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
                                 color: [1.00,1.00,1.00]
                                 width: [[8,0px],[11,0px],[12,0.30px],[13,0.5px],[15,1.5px]]
+                    primary-routes-z17:
+                        filter:
+                            $zoom: { min: 17 }
+                        draw:
+                            center-line:
+                                style: center-glow
+                                order: global.order_add_1
+                                color: [0.034,0.105,0.569]
+                                width: 6px
                     tunnel:
                         filter: { is_tunnel: yes, $zoom: { min: 13 } }
                         draw:
@@ -238,6 +256,15 @@ layers:
                         outline:
                             color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
                             width: [[8,0px],[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,2px],[18,2px]]
+                secondary-z17:
+                    filter:
+                        $zoom: { min: 17 }
+                    draw:
+                        center-line:
+                            style: center-glow
+                            order: global.order_add_1
+                            color: [0.034,0.105,0.569]
+                            width: 6px
                 routes:
                     filter: { ref: true, $zoom: { min: 12 } }
                     draw:
@@ -323,17 +350,17 @@ layers:
                     - man_made: [pier]
             draw:
                 lines:
-                    color: [[14,[0.400,0.561,0.718]],[15,[0.109,0.169,0.320]]]
-                    width: [[13,0px],[14,0.35px],[15,0.1px],[16,1.5px],[17,2px],[18,3px],[19,6px],[20,12px]]
+                    color: [[14,[0.400,0.561,0.718]],[15,[0.275,0.282,0.600]]]
+                    width: [[13,0px],[14,0.35px],[15,0.1px],[16,1.5px],[18,2.5px],[19,4px],[20,5px]]
                     outline:
-                        color: [[14,[0.400,0.561,0.718]],[16,[0.220,0.314,0.449]]]
-                        width: [[14,0px],[15,0.35px],[16,1px],[17,2px]]
+                        color: [[14,[0.400,0.561,0.718]],[16,[0.078,0.447,0.557]]]
+                        width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,4px]]
             pedestrian:
                 filter: { highway: pedestrian }
                 draw:
                     lines:
                         color: [[14,[0.400,0.561,0.718]],[15,[0.109,0.169,0.320]]]
-                        width: [[13,0px],[14,0.35px],[15,0.1px],[16,1.5px],[17,2px],[18,3px],[19,6px],[20,12px]]
+                        width: [[13,0px],[14,0.35px],[15,0.1px],[16,1.5px],[18,2.5px],[19,6px],[20,12px]]
                         outline:
                             color: [[14,[0.400,0.561,0.718]],[16,[0.220,0.314,0.449]]]
                             width: [[14,0px],[15,0.35px],[16,1px],[17,2px]]
@@ -357,6 +384,14 @@ styles:
                 GLOW_BRIGHTNESS: zoom()*.25
 
     highway-glow:
+        base: lines
+        mix: [lines-glow]
+        shaders:
+            defines:
+                GLOW_WIDTH: 0.45
+                GLOW_BRIGHTNESS: .25
+
+    center-glow:
         base: lines
         mix: [lines-glow]
         shaders:
